opam-version: "2.0"
name: "duppy"
version: "0.8.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-duppy"
bug-reports: "https://github.com/savonet/ocaml-duppy/issues"
depends: [
  "ocaml"
  "ocamlfind" {build}
  "pcre"
]
depopts: ["ssl" "osx-secure-transport"]
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [make "install"]
dev-repo: "git+https://github.com/savonet/ocaml-duppy.git"
synopsis: "Library providing monadic threads"
