opam-version: "2.0"
name: "duppy"
version: "0.8.1"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-duppy"
bug-reports: "https://github.com/savonet/ocaml-duppy/issues"
depends: [
  "ocaml"
  "ocamlfind" {build}
  "pcre"
]
depopts: ["ssl" "osx-secure-transport"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@examples"] {with-test}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/savonet/ocaml-duppy.git"
synopsis: "Library providing monadic threads"
